--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,9 @@ footer {
   justify-content: center;
   align-items: center;
 }
+.date {
+  color: rgba(164, 134, 165, 0.755);
+}
 .clock {
   display: flex;
   justify-content: center;
