--- a/src/style.css
+++ b/src/style.css
@@ -19,9 +19,7 @@ select {
   padding: 10px;
   margin-bottom: 10px;
 }
-hr {
-  margin-left: 25px;
-}
+
 small {
   margin-left: 10px;
 }
@@ -39,6 +37,13 @@ footer {
 }
 .containerH1 {
   padding: 5px;
+}
+.city {
+  display: flex;
+  margin: 10px 0;
+  justify-content: space-between;
+  padding: 30px 0;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
 }
 .date {
   color: rgba(164, 134, 165, 0.755);
