--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,12 @@ select {
   padding: 10px;
   margin-bottom: 10px;
 }
-
+footer a {
+  color: #96169fb3;
+}
+.container a {
+  color: rgba(0, 0, 0, 0.755);
+}
 small {
   margin-left: 10px;
 }
